<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.details.DetailsActivity">

    <data>

        <variable
            name="coinInfo"
            type="com.radionov.architecturemvvm.data.dto.CoinInfo" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/coin_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:imageUrl="@{coinInfo.symbol}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/coin_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{coinInfo.name}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coin_logo"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/price_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coin_title" />

                <TextView
                    android:id="@+id/price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{String.format(@string/price_format, coinInfo.priceUsd)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price_label"
                    tools:text="@tools:sample/us_zipcodes" />

                <TextView
                    android:id="@+id/market_cap_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/market_cap_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price_value" />

                <TextView
                    android:id="@+id/market_cap_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{String.format(@string/price_format, coinInfo.marketCapUsd)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/market_cap_label"
                    tools:text="@tools:sample/us_zipcodes" />

                <TextView
                    android:id="@+id/change_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/market_cap_value" />

                <TextView
                    android:id="@+id/change_label_1h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_label_1h"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    app:layout_constraintEnd_toStartOf="@+id/change_label_24h"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change_label" />

                <TextView
                    android:id="@+id/change_label_24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_label_24h"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    app:layout_constraintEnd_toStartOf="@+id/change_label_7d"
                    app:layout_constraintStart_toEndOf="@+id/change_label_1h"
                    app:layout_constraintTop_toBottomOf="@+id/change_label" />

                <TextView
                    android:id="@+id/change_label_7d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_label_7d"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/change_label_24h"
                    app:layout_constraintTop_toBottomOf="@+id/change_label" />

                <TextView
                    android:id="@+id/change_value_1h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{String.format(@string/percent_format, coinInfo.percentChange1h)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@{coinInfo.percentChange1h}"
                    app:layout_constraintStart_toStartOf="@+id/change_label_1h"
                    app:layout_constraintTop_toBottomOf="@+id/change_label_1h"
                    tools:text="@tools:sample/us_zipcodes" />

                <TextView
                    android:id="@+id/change_value_24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{String.format(@string/percent_format, coinInfo.percentChange24h)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@{coinInfo.percentChange24h}"
                    app:layout_constraintStart_toStartOf="@+id/change_label_24h"
                    app:layout_constraintTop_toBottomOf="@+id/change_label_24h"
                    tools:text="@tools:sample/us_zipcodes" />

                <TextView
                    android:id="@+id/change_value_7d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{String.format(@string/percent_format, coinInfo.percentChange7d)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@{coinInfo.percentChange7d}"
                    app:layout_constraintStart_toStartOf="@+id/change_label_7d"
                    app:layout_constraintTop_toBottomOf="@+id/change_label_7d"
                    tools:text="@tools:sample/us_zipcodes" />

                <TextView
                    android:id="@+id/last_update_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/last_update_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change_value_1h" />

                <TextView
                    android:id="@+id/last_update_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{coinInfo.lastUpdated}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_update_label"
                    tools:text="@tools:sample/date/mmddyy" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>